<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Last FM</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="scrobbles">Scrobbles</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="tracks">Tracks</string>
    <string name="profile">Profile</string>
    <string name="see_more">See more…</string>
    <string name="scrobbling_now">Scrobbling now</string>
    <string name="scrobbles_count">Scrobbles: %s</string>
    <string name="logout">Log out</string>
    <string name="country">Country</string>
    <string name="registration_date">Registration date</string>
    <string name="period">Period</string>
    <string name="overall">Overall</string>
    <string name="days_7">7 Days</string>
    <string name="month_1">1 Month</string>
    <string name="month_3">3 Month</string>
    <string name="month_6">6 Month</string>
    <string name="month_12">12 Month</string>
    <string name="listeners">Listeners</string>
    <string name="tags">Tags</string>
    <string name="artist">Artist</string>
    <string name="from_album">From album</string>
    <string name="youtube">YouTube</string>
    <string name="last_fm">Last FM</string>
    <string name="play">Play</string>
    <string name="wiki">Wiki</string>
</resources>
